--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2"
-  }
+  },
+  "dependencies": {}
 }
